[workspace]
members = [
  "bicycl-rs-sys",
  "bicycl-rs",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["qsang <qsangxin@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Jiangjiang-jiang/bicycl-rs"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
