[package]
name = "bicycl-rs"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
description = "Safe Rust wrapper for BICYCL C API"
repository.workspace = true
homepage = "https://github.com/Jiangjiang-jiang/bicycl-rs"
documentation = "https://docs.rs/bicycl-rs"
readme = "README.md"
include = [
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "src/**",
]
keywords = ["crypto", "class-group", "bicycl"]
categories = ["cryptography", "api-bindings"]

[dependencies]
bicycl-rs-sys = { path = "../bicycl-rs-sys", version = "0.1.0" }
thiserror = "2"

[lints]
workspace = true

[dev-dependencies]
serial_test = "3"
trybuild = "1"
